--- a/client/src/assets/sass/pages/_header.scss
+++ b/client/src/assets/sass/pages/_header.scss
@@ -5,6 +5,7 @@
     background: gray url('../img/home-bg.jpg') no-repeat center center;
     background-size: cover;
     text-shadow: 1px 1px 10px #fff;
+    box-shadow: 0px 12px 20px -2px rgba(0,0,0,0.5);
     .site-header-logo {
         font-size: 30px;
         position: absolute;
