--- a/client/src/assets/sass/pages/_footer.scss
+++ b/client/src/assets/sass/pages/_footer.scss
@@ -5,6 +5,7 @@
     padding: 1rem 0;
     text-align: center;
     border-top: 1px #eee solid;
+    background-color: #393c40;
     .copyright {
         color: #777;
         a {
