--- a/client/src/assets/sass/app.scss
+++ b/client/src/assets/sass/app.scss
@@ -116,6 +116,20 @@
         background-color: rgba(0, 0, 0, .5);
     }
 }
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.4);
+    z-index: 999;
+    display: none;
+    img {
+        width: 100%;
+        position: absolute;
+    }
+}
 .ReactModalPortal > div > div {
     box-shadow: 0 15px 35px rgba(0, 0, 0, .5);
     h3 {
