--- a/client/src/assets/sass/pages/_navbar.scss
+++ b/client/src/assets/sass/pages/_navbar.scss
@@ -110,7 +110,7 @@
             a {
                 color: rgba(255,255,255,.8);
                 display: block;
-                font-size: 0.8rem;
+                font-size: 0.5rem;
                 &:hover {
                     text-shadow: 2px 2px 8px rgba(0, 0, 0, .9);
                     transform: scale(1.2);
@@ -127,6 +127,11 @@
                     &:nth-child(#{$i}) {
                         transition-delay: $i * 0.1s + 0.65s;
                     }
+                }
+            }
+            @media screen and (max-width: 480px) {
+                a {
+                    font-size: 0.8rem;
                 }
             }
         }
