--- a/client/src/assets/sass/pages/_header.scss
+++ b/client/src/assets/sass/pages/_header.scss
@@ -73,7 +73,7 @@
         input {
             width: 10px;
             height: 36px;
-            padding: 0 20px;
+            padding: 0 40px;
             border: 1px #eee solid;
             border-radius: 18px;
             opacity: 0;
@@ -99,22 +99,45 @@
             transition: opacity 0.2s ease-out;
             animation: search-input-animation 0.8s ease-out 0.8s both;
         }
-        .site-search-type {
-            display: none;
+        .site-change-btn {
+            display: inline-block;
+            width: 36px;
+            height: 36px;
+            border-radius: 18px;
+            color: #ccc;
+            border: 1px #eee solid;
             position: absolute;
+            line-height: 36px;
+            left: 0;
             top: 0;
-            left: -10%;
-            width: 120%;
+            opacity: 0;
+            &:before {
+                content: '';
+                position: absolute;
+                top: 15px;
+                left: 9px;
+                cursor: pointer;
+                border: 8px #ccc solid;
+                border-color: #ccc transparent transparent transparent;
+            }
+            &.active {
+                opacity: 1;
+                animation: search-input-animation 0.4s ease-out 1.2s both;
+            }
+        }
+        .site-search-type {
+            opacity: 0;
+            width: 270px;
             list-style: none;
-            margin: 0;
+            margin: -1px auto;
             padding: 0;
             background: #fff;
-            height: 100px;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
+            transition: opacity 0.4s ease-out;
+            border-radius: 0 0 10px 10px;
+            li {
+                height: 30px;
+                line-height: 30px;
+            }
             h3 {
                 width: 100%;
                 padding: 10px;
@@ -148,13 +171,14 @@
         .site-search {
             input {
                 width: 160px;
+                opacity: 1;
                 &.active {
                     width: 160px;
                 }
             }
             .site-search-btn {
                 display: block;
-                width: 200px;
+                width: 240px;
                 margin-top: 20px;
                 margin-left: 0;
             }
