--- a/client/src/assets/sass/pages/_header.scss
+++ b/client/src/assets/sass/pages/_header.scss
@@ -73,7 +73,7 @@
         input {
             width: 10px;
             height: 36px;
-            padding: 0 40px;
+            padding: 0 40px 0 80px;
             border: 1px #eee solid;
             border-radius: 18px;
             opacity: 0;
@@ -94,14 +94,14 @@
             border: 1px #0f9 solid;
             color: #fff;
             background-color: #0f9;
-            line-height: 36px;
+            line-height: 34px;
             margin-left: -60px;
             transition: opacity 0.2s ease-out;
             animation: search-input-animation 0.8s ease-out 0.8s both;
         }
         .site-change-btn {
             display: inline-block;
-            width: 36px;
+            width: 60px;
             height: 36px;
             border-radius: 18px;
             color: #ccc;
@@ -111,6 +111,8 @@
             left: 0;
             top: 0;
             opacity: 0;
+            text-align: right;
+            padding-right: 12px;
             &:before {
                 content: '';
                 position: absolute;
@@ -127,13 +129,15 @@
         }
         .site-search-type {
             opacity: 0;
-            width: 270px;
+            width: 72px;
             list-style: none;
             margin: -1px auto;
             padding: 0;
             background: #fff;
             transition: opacity 0.4s ease-out;
-            border-radius: 0 0 10px 10px;
+            border-radius: 10px;
+            position: absolute;
+            top: 45px;
             li {
                 height: 30px;
                 line-height: 30px;
@@ -170,17 +174,16 @@
         }
         .site-search {
             input {
-                width: 160px;
-                opacity: 1;
                 &.active {
                     width: 160px;
                 }
             }
             .site-search-btn {
-                display: block;
-                width: 240px;
-                margin-top: 20px;
-                margin-left: 0;
+                line-height: 36px;
+                margin-left: -120px;
+                &.active {
+                    animation: search-btn-animation 0.8s ease-out 0.8s forwards;
+                }
             }
         }
     }
@@ -197,6 +200,14 @@
     }
     100% {
         opacity: 1;
+    }
+}
+@keyframes search-btn-animation {
+    0% {
+        margin-left: -120px;
+    }
+    100% {
+        margin-left: -60px;
     }
 }
 @keyframes site-header-title-animation {
